test/compile_errors/err_issue64_shared_vec_push_requires_mut_receiver.w
//! expect-error: method 'Vec.push' requires a mutable receiver

fn main:
    let items: Vec[i32] = Vec.new()
    let shared = &items
    shared.push(1)
